--- a/src/apache/taws.conf
+++ b/src/apache/taws.conf
@@ -6,11 +6,11 @@ NameVirtualHost *:4132
 <VirtualHost *:4132>
   ServerName localhost
 
-  SSLEngine on
-  SSLCipherSuite HIGH:!aNULL:!MD5
-  SSLProtocol All -SSLv2
-  SSLCertificateFile /etc/ssl/taws/apache.crt
-  SSLCertificateKeyFile /etc/ssl/taws/apache.key
+  #SSLEngine on
+  #SSLCipherSuite HIGH:!aNULL:!MD5
+  #SSLProtocol All -SSLv2
+  #SSLCertificateFile /etc/ssl/taws/apache.crt
+  #SSLCertificateKeyFile /etc/ssl/taws/apache.key
 
   DocumentRoot /var/www/taws/
   <Directory /var/www/taws/>
