--- a/src/apache/taws.conf
+++ b/src/apache/taws.conf
@@ -1,7 +1,7 @@
 Listen 4132
 NameVirtualHost *:4132
 
-<IfModule ssl_module>
+#<IfModule ssl_module>
 
 <VirtualHost *:4132>
   ServerName localhost
@@ -21,4 +21,4 @@ NameVirtualHost *:4132
   </Directory>
 </VirtualHost>
 
-</IfModule>
+#</IfModule>
