--- a/src/sphinx/conf/sphinx.conf
+++ b/src/sphinx/conf/sphinx.conf
@@ -14,9 +14,9 @@ source taws_src
 {
     type      = mysql   
     sql_host  = localhost
-    sql_user  = root
+    sql_user  = taws
     sql_pass  =
-    sql_db    = taws_data
+    sql_db    = taws_db
     sql_port  = 3306
            
     sql_attr_uint  = frequency
