added sqlite and postgresql support,fix sphinx not using multi core feature, made some code more readable, and other minor changes

--- a/src/sphinx/conf/sphinx.conf
+++ b/src/sphinx/conf/sphinx.conf
@@ -132,8 +132,7 @@ searchd
 	unlink_old		= 1
 	workers			= threads # for RT to work
 	binlog_path		= /var/lib/data
-	
-	
+	dist_threads            = 2
 }
 
 
